// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feature should render loading 1`] = `
<div>
  <div
    aria-busy="true"
    class="block-ui undefined"
  >
    <div
      tabindex="0"
    />
    <div
      class="block-ui-container"
      tabindex="0"
    >
      <div
        class="block-ui-overlay"
      />
      <div
        class="block-ui-message-container"
      >
        <div
          class="block-ui-message"
        >
          <div
            class="loading-indicator"
          >
            <span
              class="loading-bullet"
            >
              •
            </span>
             
            <span
              class="loading-bullet"
            >
              •
            </span>
             
            <span
              class="loading-bullet"
            >
              •
            </span>
          </div>
        </div>
      </div>
    </div>
    <span />
  </div>
</div>
`;

exports[`Feature should render negate features 1`] = `
<div>
  You can see this
</div>
`;

exports[`Feature should render with array of features 1`] = `
<div>
  You do not have permission to see this
</div>
`;

exports[`Feature should render with single permission 1`] = `
<div>
  You do not have permission to see this
</div>
`;
